--- a/src/css/style.css
+++ b/src/css/style.css
@@ -467,3 +467,16 @@ label, legend, input, textarea, select {
       width: 100%;
     }
   }
+
+  span.red {
+    background: red;
+     border-radius: 0.8em;
+    -moz-border-radius: 0.8em;
+    -webkit-border-radius: 0.8em;
+    color: #ffffff;
+    display: inline-block;
+    font-weight: bold;
+    line-height: 1.6em;
+    text-align: center;
+    width: 1.6em; 
+  }
