--- a/src/css/style.css
+++ b/src/css/style.css
@@ -123,6 +123,12 @@ section {
     width: 40px;
     margin-right: 20px; } }
 
+@media (min-width: 1366px){
+  .main-footer{
+    margin-top: 87px;
+  }
+}
+
 .main-footer__social {
   width: 30px; }
 
@@ -480,60 +486,3 @@ label, legend, input, textarea, select {
     text-align: center;
     width: 1.6em; 
   }
-
-
-  .lds-heart {
-    display: inline-block;
-    position: relative;
-    width: 80px;
-    height: 80px;
-    transform: rotate(45deg);
-    transform-origin: 40px 40px;
-  }
-  .lds-heart div {
-    top: 32px;
-    left: 32px;
-    position: absolute;
-    width: 32px;
-    height: 32px;
-    background: #fed;
-    animation: lds-heart 1.2s infinite cubic-bezier(0.215, 0.61, 0.355, 1);
-  }
-  .lds-heart div:after,
-  .lds-heart div:before {
-    content: " ";
-    position: absolute;
-    display: block;
-    width: 32px;
-    height: 32px;
-    background: #fed;
-  }
-  .lds-heart div:before {
-    left: -24px;
-    border-radius: 50% 0 0 50%;
-  }
-  .lds-heart div:after {
-    top: -24px;
-    border-radius: 50% 50% 0 0;
-  }
-  @keyframes lds-heart {
-    0% {
-      transform: scale(0.95);
-    }
-    5% {
-      transform: scale(1.1);
-    }
-    39% {
-      transform: scale(0.85);
-    }
-    45% {
-      transform: scale(1);
-    }
-    60% {
-      transform: scale(0.95);
-    }
-    100% {
-      transform: scale(0.9);
-    }
-  }
-  
